# ai-platform

./: .gitignore  README.md  desktop.ini  docker-compose.yml  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/users/: default_user.json  remoteai engineer.json  test_user.json
eval/: eval_data.json  run_evals.py  test_agent.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/production_docs/0/: replica_state.json
scripts/: 20test_rerank_impact.py  chunking_lab.py  day20_test_pipeline.py  ingest.py  run_crm_agents.py  seed_hybrid_knowledge.py  test_mcp_client.py  test_qdrant.py
src/ai_platform/: __init__.py
src/core/: agent.py  agent_graph.py  benchmark.py  factory.py  logger.py  mcp_server.py  memory.py  metrics.py  orchestrator.py  processor.py  retriever.py  tools.py  vector_memory.py
src/schemas/: invoice.py
