[project]
name = "ai-platform"
version = "0.1.0"
description = "AI platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.135.3",
    "google-genai>=1.69.0",
    "groq>=1.1.2",
    "instructor>=1.14.5",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
